--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,7 +62,8 @@
     <Compile Include="Assets\Scripts\EvolutionController.cs" />
     <Compile Include="Assets\Scripts\BallController.cs" />
     <Compile Include="Assets\Scripts\ScoreboardController.cs" />
-    <Compile Include="Assets\CameraNavigationController.cs" />
+    <Compile Include="Assets\Scripts\CameraNavigationController.cs" />
+    <Compile Include="Assets\Scripts\ArenaSelectController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
